cleanup naming and docs
